--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script src="https://js.stripe.com/v3/"></script>
   <app-root></app-root>
 </body>
 </html>
